--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - mongo2
       - mongo3
     healthcheck:
-      test: mongosh --host mongo1 --eval 'rs.initiate({_id:"myReplicaSet",members:[{_id:0,host:"mongo1"},{_id:1,host:"mongo2"},{_id:2,host:"mongo3"}]})'
+      test: ["CMD", "mongosh", "--host", "mongo1", "--eval", "rs.initiate({_id:\"myReplicaSet\",members:[{_id:0,host:\"mongo1\"},{_id:1,host:\"mongo2\"},{_id:2,host:\"mongo3\"}]})"]
       interval: 10s
       timeout: 10s
       retries: 3
