--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,25 @@
 version: "3.8"
 
+x-mongo:
+  &default-mongo
+  image: mongo:6.0.3
+  restart: always
+
 services:
   mongo1:
+    << : *default-mongo
     hostname: mongo1
-    image: mongo:6.0.3
-    ports:
-      - 27017:27017 
-    restart: always
-    command: mongod --replSet myReplicaSet --bind_ip localhost,mongo1
+    command: mongod --configsvr --replSet myReplicaSet --bind_ip localhost,mongo1
   mongo2:
+    << : *default-mongo
     hostname: mongo2
-    image: mongo:6.0.3
-    ports:
-      - 27018:27017
-    restart: always
-    command: mongod --replSet myReplicaSet --bind_ip localhost,mongo2
+    command: mongod --configsvr --replSet myReplicaSet --bind_ip localhost,mongo2
   mongo3:
+    << : *default-mongo
     hostname: mongo3
-    image: mongo:6.0.3
-    ports:
-      - 27019:27017
-    restart: always
-    command: mongod --replSet myReplicaSet --bind_ip localhost,mongo3
+    command: mongod --configsvr --replSet myReplicaSet --bind_ip localhost,mongo3
   mongoinit:
-    image: mongo:6.0.3
+    << : *default-mongo
     restart: "no"
     depends_on:
       - mongo1
@@ -31,4 +27,5 @@ services:
       - mongo3
     command: >
       sh -c "sleep 20 &&
-             mongosh --host mongo1 --eval 'rs.initiate({_id:\"myReplicaSet\",members:[{_id:0,host:\"mongo1\"},{_id:1,host:\"mongo2\"},{_id:2,host:\"mongo3\"}]})'"
+             mongosh --host mongo1 --port 27019 --eval 'rs.initiate({_id:\"myReplicaSet\",configsvr:true,members:[{_id:0,host:\"mongo1:27019\"},{_id:1,host:\"mongo2:27019\"},{_id:2,host:\"mongo3:27019\"}]})'"
+
